--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
+    "@types/node": "^24.3.1",
     "@vitejs/plugin-vue": "^5.0.4",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
