--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,6 +1,6 @@
 .PHONY: run dev migrate-up migrate-down
 
-DB_DSN ?= postgres://postgres:postgres@localhost:54322/specs?sslmode=disable
+DATABASE_URL ?= postgres://postgres:postgres@localhost:54322/specs?sslmode=disable
 
 run:
 	go run ./cmd/server
@@ -9,7 +9,7 @@ dev:
 	go run ./cmd/server
 
 migrate-up:
-	migrate -path ./migrations -database "$(DB_DSN)" up
+	migrate -path ./migrations -database "$(DATABASE_URL)" up
 
 migrate-down:
-	migrate -path ./migrations -database "$(DB_DSN)" down 1
+	migrate -path ./migrations -database "$(DATABASE_URL)" down 1
