--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,3 @@
-PORT=8080
-DB_DSN=postgres://postgres:postgres@localhost:54322/specs?sslmode=disable
-LLMVEC_URL=http://localhost:8000
-SIM_THRESHOLD=0.86
-TOP_K=5
+DATABASE_URL=postgres://postgres:postgres@localhost:54322/specs?sslmode=disable
+QDRANT_URL=http://localhost:6333
+LLM_BACKEND_URL=http://localhost:8000
