--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,4 @@
 DATABASE_URL=postgres://postgres:postgres@localhost:54322/specs?sslmode=disable
 QDRANT_URL=http://localhost:6333
 LLM_BACKEND_URL=http://localhost:8000
+AUTO_CODE_GENERATION=true
