--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,3 +2,11 @@ DATABASE_URL=postgres://postgres:postgres@localhost:54322/specs?sslmode=disable
 QDRANT_URL=http://localhost:6333
 LLM_BACKEND_URL=http://localhost:8000
 AUTO_CODE_GENERATION=true
+
+# Git Repository Configuration
+GIT_REPO_PATH=/path/to/your/games-repository
+GIT_REPO_URL=https://github.com/yourusername/generated-games.git
+GIT_USERNAME=your-github-username
+GIT_TOKEN=ghp_your_personal_access_token_here
+GIT_AUTO_PUSH=true
+GIT_COMMIT_MESSAGE_TEMPLATE=Generated game: %s
