--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,3 +10,8 @@ GIT_USERNAME=your-github-username
 GIT_TOKEN=ghp_your_personal_access_token_here
 GIT_AUTO_PUSH=true
 GIT_COMMIT_MESSAGE_TEMPLATE=Generated game: %s
+
+# Devin
+DEVIN_API_KEY=
+DEVIN_API_URL=https://api.devin.ai/v1/tasks
+DEVIN_AUTO_ASSIGN=true
